# hash23

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conandata.yml  conanfile.py
.github/workflows/: cmake-big-endian-s390x.yml  cmake-multi-platform.yml
cmake/: hash23Config.cmake.in
include/hash23/: crc32.h  fnv_1.h  fnv_1a.h  hash23.h  md5.h  sha2.h  sha2_512.h  sha3.h  sha512.h
tests/: CMakeLists.txt  crc32_tests.cpp  fnv_1_tests.cpp  fnv_1a_tests.cpp  main.cpp  md5_tests.cpp  sha2_224_tests.cpp  sha2_256_tests.cpp  sha2_384_tests.cpp  sha2_512_tests.cpp  sha3_224_tests.cpp  sha3_256_tests.cpp  sha3_384_tests.cpp  sha3_512_tests.cpp  sha512_tests.cpp
